added ulaw and alaw plugins

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,8 @@ plugin_LTLIBRARIES = \
 	revdelay_1605.la ls_filter_1908.la \
 	const_1909.la pointer_cast_1910.la fast_lookahead_limiter_1913.la \
 	latency_1914.la xfade_1915.la sc4m_1916.la \
-	mbeq_1197.la pitch_scale_1193.la pitch_scale_1194.la imp_1199.la
+	mbeq_1197.la pitch_scale_1193.la pitch_scale_1194.la imp_1199.la \
+	ulaw_4701.la alaw_4702.la
 
 SUBDIRS = po util gsm gverb metadata
 
